# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import imoveisRouter from "./imoveis";
 import avaliacoesRouter from "./avaliacoes";
+import comparacoesRouter from "./comparacoes";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(imoveisRouter);
 router.use(avaliacoesRouter);
+router.use(comparacoesRouter);
 
 export default router;
